<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dffbff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.baptiste.cetokids.view.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/charger_objectif"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmidtop"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/charger_objectif"
            android:visibility="invisible"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/chargerObjectif"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:onClick="onClickLoadObjectif"
            android:text="@string/charger" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutmidtop">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Proteine"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#0044ff" />

            <EditText
                android:id="@+id/proteines"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:gravity="center"
                android:hint="0"
                android:inputType="number|numberDecimal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lipide"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#00a505" />

            <EditText
                android:id="@+id/lipides"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:gravity="center"
                android:hint="0"
                android:inputType="number|numberDecimal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/glucide"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c37200" />

            <EditText
                android:id="@+id/glucides"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:gravity="center"
                android:hint="0"
                android:inputType="number|numberDecimal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMiddleBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutMiddle"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kcal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kcal"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/kcalResult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ratioText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ratio_regime"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ratioResult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1:1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutSuivant"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutMiddleBottom">

        <Button
            android:id="@+id/calcul"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:onClick="onClickCaclul"
            android:text="@string/suivant" />
    </LinearLayout>


</RelativeLayout>
