<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baptiste.cetokids.view.DetailRecetteAtivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarDetailRecette"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/layoutNomRecette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarTop"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nomRecette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="NA"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kcal : "
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/recetteKcal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="NA"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ratio : "
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView2" />

                <TextView
                    android:id="@+id/recetteRatio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="NA"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutNomRecette">

            <TextView
                android:id="@+id/recetteProteine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:gravity="left"
                android:text="@string/proteine"
                android:textColor="#0044ff" />


            <TextView
                android:id="@+id/recetteLipide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:gravity="left"
                android:text="@string/lipide"
                android:textColor="#00a505" />

            <TextView
                android:id="@+id/recetteGlucide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:gravity="left"
                android:text="@string/glucide"
                android:textColor="#c37200" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutMid"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/proteine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:gravity="left"
                android:text="@string/proteine"
                android:textColor="#0044ff" />


            <TextView
                android:id="@+id/lipide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:gravity="left"
                android:text="@string/lipide"
                android:textColor="#00a505" />

            <TextView
                android:id="@+id/glucide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:gravity="left"
                android:text="@string/glucide"
                android:textColor="#c37200" />

        </LinearLayout>

        <ListView
            android:id="@+id/listViewDetailRecette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nomRecette" />
    </LinearLayout>
</RelativeLayout>
